lab2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT

Grammar

Rule 0     S' -> program
Rule 1     program -> instructions_opt
Rule 2     instructions_opt -> instructions
Rule 3     instructions_opt -> <empty>
Rule 4     instructions -> instructions instruction
Rule 5     instructions -> instruction
Rule 6     instruction -> block
Rule 7     instruction -> if
Rule 8     instruction -> print
Rule 9     instruction -> while
Rule 10    instruction -> for
Rule 11    instruction -> break
Rule 12    instruction -> continue
Rule 13    instruction -> return
Rule 14    instruction -> assign
Rule 15    instruction -> assign_in_array
Rule 16    block -> { instructions }
Rule 17    if -> IF ( assignment ) instruction
Rule 18    if -> IF ( assignment ) instruction ELSE instruction
Rule 19    print -> PRINT arguments ;
Rule 20    arguments -> assignment
Rule 21    arguments -> assignment , arguments
Rule 22    while -> WHILE ( assignment ) instruction
Rule 23    for -> FOR ID = range instruction
Rule 24    range -> expression : expression
Rule 25    break -> BREAK ;
Rule 26    continue -> CONTINUE ;
Rule 27    return -> RETURN ;
Rule 28    return -> RETURN assignment ;
Rule 29    assign -> ID = assign
Rule 30    assign -> ID = assignment ;
Rule 31    assign -> ID PLUSASSIGN assignment ;
Rule 32    assign -> ID MINUSASSIGN assignment ;
Rule 33    assign -> ID TIMESASSIGN assignment ;
Rule 34    assign -> ID DIVIDEASSIGN assignment ;
Rule 35    assign_in_array -> ID array_range = assign
Rule 36    assign_in_array -> ID array_range = assignment ;
Rule 37    assign_in_array -> ID array_range PLUSASSIGN assignment ;
Rule 38    assign_in_array -> ID array_range MINUSASSIGN assignment ;
Rule 39    assign_in_array -> ID array_range TIMESASSIGN assignment ;
Rule 40    assign_in_array -> ID array_range DIVIDEASSIGN assignment ;
Rule 41    array_range -> [ INTNUM , INTNUM ]
Rule 42    array_range -> [ INTNUM ]
Rule 43    assignment -> STRING
Rule 44    assignment -> matrix_special_features
Rule 45    assignment -> relational_expression
Rule 46    assignment -> expression
Rule 47    assignment -> array
Rule 48    array -> [ ]
Rule 49    array -> [ dimensions ]
Rule 50    dimensions -> values
Rule 51    dimensions -> values ; dimensions
Rule 52    values -> value
Rule 53    values -> value , values
Rule 54    value -> STRING
Rule 55    value -> number
Rule 56    relational_expression -> expression < expression
Rule 57    relational_expression -> expression > expression
Rule 58    relational_expression -> expression LESSEQUAL expression
Rule 59    relational_expression -> expression GREATEREQUAL expression
Rule 60    relational_expression -> expression EQUAL expression
Rule 61    relational_expression -> expression NOTEQUAL expression
Rule 62    expression -> expression + expression
Rule 63    expression -> expression - expression
Rule 64    expression -> expression * expression
Rule 65    expression -> expression / expression
Rule 66    expression -> expression DOTPLUS expression
Rule 67    expression -> expression DOTMINUS expression
Rule 68    expression -> expression DOTTIMES expression
Rule 69    expression -> expression DOTDIVIDE expression
Rule 70    expression -> number
Rule 71    expression -> ID
Rule 72    expression -> ID TRANSPOSE
Rule 73    expression -> - expression
Rule 74    matrix_special_features -> EYE ( INTNUM )
Rule 75    matrix_special_features -> ZEROS ( INTNUM )
Rule 76    matrix_special_features -> ONES ( INTNUM )
Rule 77    number -> INTNUM
Rule 78    number -> FLOATNUM

Terminals, with rules where they appear

(                    : 17 18 22 74 75 76
)                    : 17 18 22 74 75 76
*                    : 64
+                    : 62
,                    : 21 41 53
-                    : 63 73
/                    : 65
:                    : 24
;                    : 19 25 26 27 28 30 31 32 33 34 36 37 38 39 40 51
<                    : 56
=                    : 23 29 30 35 36
>                    : 57
BREAK                : 25
COMMENT              : 
CONTINUE             : 26
DIVIDEASSIGN         : 34 40
DOTDIVIDE            : 69
DOTMINUS             : 67
DOTPLUS              : 66
DOTTIMES             : 68
ELSE                 : 18
EQUAL                : 60
EYE                  : 74
FLOATNUM             : 78
FOR                  : 23
GREATEREQUAL         : 59
ID                   : 23 29 30 31 32 33 34 35 36 37 38 39 40 71 72
IF                   : 17 18
INTNUM               : 41 41 42 74 75 76 77
LESSEQUAL            : 58
MINUSASSIGN          : 32 38
NOTEQUAL             : 61
ONES                 : 76
PLUSASSIGN           : 31 37
PRINT                : 19
RETURN               : 27 28
STRING               : 43 54
TIMESASSIGN          : 33 39
TRANSPOSE            : 72
WHILE                : 22
ZEROS                : 75
[                    : 41 42 48 49
]                    : 41 42 48 49
error                : 
{                    : 16
}                    : 16

Nonterminals, with rules where they appear

arguments            : 19 21
array                : 47
array_range          : 35 36 37 38 39 40
assign               : 14 29 35
assign_in_array      : 15
assignment           : 17 18 20 21 22 28 30 31 32 33 34 36 37 38 39 40
block                : 6
break                : 11
continue             : 12
dimensions           : 49 51
expression           : 24 24 46 56 56 57 57 58 58 59 59 60 60 61 61 62 62 63 63 64 64 65 65 66 66 67 67 68 68 69 69 73
for                  : 10
if                   : 7
instruction          : 4 5 17 18 18 22 23
instructions         : 2 4 16
instructions_opt     : 1
matrix_special_features : 44
number               : 55 70
print                : 8
program              : 0
range                : 23
relational_expression : 45
return               : 13
value                : 52 53
values               : 50 51 53
while                : 9

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . instructions_opt
    (2) instructions_opt -> . instructions
    (3) instructions_opt -> .
    (4) instructions -> . instructions instruction
    (5) instructions -> . instruction
    (6) instruction -> . block
    (7) instruction -> . if
    (8) instruction -> . print
    (9) instruction -> . while
    (10) instruction -> . for
    (11) instruction -> . break
    (12) instruction -> . continue
    (13) instruction -> . return
    (14) instruction -> . assign
    (15) instruction -> . assign_in_array
    (16) block -> . { instructions }
    (17) if -> . IF ( assignment ) instruction
    (18) if -> . IF ( assignment ) instruction ELSE instruction
    (19) print -> . PRINT arguments ;
    (22) while -> . WHILE ( assignment ) instruction
    (23) for -> . FOR ID = range instruction
    (25) break -> . BREAK ;
    (26) continue -> . CONTINUE ;
    (27) return -> . RETURN ;
    (28) return -> . RETURN assignment ;
    (29) assign -> . ID = assign
    (30) assign -> . ID = assignment ;
    (31) assign -> . ID PLUSASSIGN assignment ;
    (32) assign -> . ID MINUSASSIGN assignment ;
    (33) assign -> . ID TIMESASSIGN assignment ;
    (34) assign -> . ID DIVIDEASSIGN assignment ;
    (35) assign_in_array -> . ID array_range = assign
    (36) assign_in_array -> . ID array_range = assignment ;
    (37) assign_in_array -> . ID array_range PLUSASSIGN assignment ;
    (38) assign_in_array -> . ID array_range MINUSASSIGN assignment ;
    (39) assign_in_array -> . ID array_range TIMESASSIGN assignment ;
    (40) assign_in_array -> . ID array_range DIVIDEASSIGN assignment ;

    $end            reduce using rule 3 (instructions_opt -> .)
    {               shift and go to state 15
    IF              shift and go to state 16
    PRINT           shift and go to state 17
    WHILE           shift and go to state 18
    FOR             shift and go to state 19
    BREAK           shift and go to state 21
    CONTINUE        shift and go to state 22
    RETURN          shift and go to state 23
    ID              shift and go to state 20

    program                        shift and go to state 1
    instructions_opt               shift and go to state 2
    instructions                   shift and go to state 3
    instruction                    shift and go to state 4
    block                          shift and go to state 5
    if                             shift and go to state 6
    print                          shift and go to state 7
    while                          shift and go to state 8
    for                            shift and go to state 9
    break                          shift and go to state 10
    continue                       shift and go to state 11
    return                         shift and go to state 12
    assign                         shift and go to state 13
    assign_in_array                shift and go to state 14

state 1

    (0) S' -> program .



state 2

    (1) program -> instructions_opt .

    $end            reduce using rule 1 (program -> instructions_opt .)


state 3

    (2) instructions_opt -> instructions .
    (4) instructions -> instructions . instruction
    (6) instruction -> . block
    (7) instruction -> . if
    (8) instruction -> . print
    (9) instruction -> . while
    (10) instruction -> . for
    (11) instruction -> . break
    (12) instruction -> . continue
    (13) instruction -> . return
    (14) instruction -> . assign
    (15) instruction -> . assign_in_array
    (16) block -> . { instructions }
    (17) if -> . IF ( assignment ) instruction
    (18) if -> . IF ( assignment ) instruction ELSE instruction
    (19) print -> . PRINT arguments ;
    (22) while -> . WHILE ( assignment ) instruction
    (23) for -> . FOR ID = range instruction
    (25) break -> . BREAK ;
    (26) continue -> . CONTINUE ;
    (27) return -> . RETURN ;
    (28) return -> . RETURN assignment ;
    (29) assign -> . ID = assign
    (30) assign -> . ID = assignment ;
    (31) assign -> . ID PLUSASSIGN assignment ;
    (32) assign -> . ID MINUSASSIGN assignment ;
    (33) assign -> . ID TIMESASSIGN assignment ;
    (34) assign -> . ID DIVIDEASSIGN assignment ;
    (35) assign_in_array -> . ID array_range = assign
    (36) assign_in_array -> . ID array_range = assignment ;
    (37) assign_in_array -> . ID array_range PLUSASSIGN assignment ;
    (38) assign_in_array -> . ID array_range MINUSASSIGN assignment ;
    (39) assign_in_array -> . ID array_range TIMESASSIGN assignment ;
    (40) assign_in_array -> . ID array_range DIVIDEASSIGN assignment ;

    $end            reduce using rule 2 (instructions_opt -> instructions .)
    {               shift and go to state 15
    IF              shift and go to state 16
    PRINT           shift and go to state 17
    WHILE           shift and go to state 18
    FOR             shift and go to state 19
    BREAK           shift and go to state 21
    CONTINUE        shift and go to state 22
    RETURN          shift and go to state 23
    ID              shift and go to state 20

    instruction                    shift and go to state 24
    block                          shift and go to state 5
    if                             shift and go to state 6
    print                          shift and go to state 7
    while                          shift and go to state 8
    for                            shift and go to state 9
    break                          shift and go to state 10
    continue                       shift and go to state 11
    return                         shift and go to state 12
    assign                         shift and go to state 13
    assign_in_array                shift and go to state 14

state 4

    (5) instructions -> instruction .

    {               reduce using rule 5 (instructions -> instruction .)
    IF              reduce using rule 5 (instructions -> instruction .)
    PRINT           reduce using rule 5 (instructions -> instruction .)
    WHILE           reduce using rule 5 (instructions -> instruction .)
    FOR             reduce using rule 5 (instructions -> instruction .)
    BREAK           reduce using rule 5 (instructions -> instruction .)
    CONTINUE        reduce using rule 5 (instructions -> instruction .)
    RETURN          reduce using rule 5 (instructions -> instruction .)
    ID              reduce using rule 5 (instructions -> instruction .)
    $end            reduce using rule 5 (instructions -> instruction .)
    }               reduce using rule 5 (instructions -> instruction .)


state 5

    (6) instruction -> block .

    {               reduce using rule 6 (instruction -> block .)
    IF              reduce using rule 6 (instruction -> block .)
    PRINT           reduce using rule 6 (instruction -> block .)
    WHILE           reduce using rule 6 (instruction -> block .)
    FOR             reduce using rule 6 (instruction -> block .)
    BREAK           reduce using rule 6 (instruction -> block .)
    CONTINUE        reduce using rule 6 (instruction -> block .)
    RETURN          reduce using rule 6 (instruction -> block .)
    ID              reduce using rule 6 (instruction -> block .)
    $end            reduce using rule 6 (instruction -> block .)
    }               reduce using rule 6 (instruction -> block .)
    ELSE            reduce using rule 6 (instruction -> block .)


state 6

    (7) instruction -> if .

    {               reduce using rule 7 (instruction -> if .)
    IF              reduce using rule 7 (instruction -> if .)
    PRINT           reduce using rule 7 (instruction -> if .)
    WHILE           reduce using rule 7 (instruction -> if .)
    FOR             reduce using rule 7 (instruction -> if .)
    BREAK           reduce using rule 7 (instruction -> if .)
    CONTINUE        reduce using rule 7 (instruction -> if .)
    RETURN          reduce using rule 7 (instruction -> if .)
    ID              reduce using rule 7 (instruction -> if .)
    $end            reduce using rule 7 (instruction -> if .)
    }               reduce using rule 7 (instruction -> if .)
    ELSE            reduce using rule 7 (instruction -> if .)


state 7

    (8) instruction -> print .

    {               reduce using rule 8 (instruction -> print .)
    IF              reduce using rule 8 (instruction -> print .)
    PRINT           reduce using rule 8 (instruction -> print .)
    WHILE           reduce using rule 8 (instruction -> print .)
    FOR             reduce using rule 8 (instruction -> print .)
    BREAK           reduce using rule 8 (instruction -> print .)
    CONTINUE        reduce using rule 8 (instruction -> print .)
    RETURN          reduce using rule 8 (instruction -> print .)
    ID              reduce using rule 8 (instruction -> print .)
    $end            reduce using rule 8 (instruction -> print .)
    }               reduce using rule 8 (instruction -> print .)
    ELSE            reduce using rule 8 (instruction -> print .)


state 8

    (9) instruction -> while .

    {               reduce using rule 9 (instruction -> while .)
    IF              reduce using rule 9 (instruction -> while .)
    PRINT           reduce using rule 9 (instruction -> while .)
    WHILE           reduce using rule 9 (instruction -> while .)
    FOR             reduce using rule 9 (instruction -> while .)
    BREAK           reduce using rule 9 (instruction -> while .)
    CONTINUE        reduce using rule 9 (instruction -> while .)
    RETURN          reduce using rule 9 (instruction -> while .)
    ID              reduce using rule 9 (instruction -> while .)
    $end            reduce using rule 9 (instruction -> while .)
    }               reduce using rule 9 (instruction -> while .)
    ELSE            reduce using rule 9 (instruction -> while .)


state 9

    (10) instruction -> for .

    {               reduce using rule 10 (instruction -> for .)
    IF              reduce using rule 10 (instruction -> for .)
    PRINT           reduce using rule 10 (instruction -> for .)
    WHILE           reduce using rule 10 (instruction -> for .)
    FOR             reduce using rule 10 (instruction -> for .)
    BREAK           reduce using rule 10 (instruction -> for .)
    CONTINUE        reduce using rule 10 (instruction -> for .)
    RETURN          reduce using rule 10 (instruction -> for .)
    ID              reduce using rule 10 (instruction -> for .)
    $end            reduce using rule 10 (instruction -> for .)
    }               reduce using rule 10 (instruction -> for .)
    ELSE            reduce using rule 10 (instruction -> for .)


state 10

    (11) instruction -> break .

    {               reduce using rule 11 (instruction -> break .)
    IF              reduce using rule 11 (instruction -> break .)
    PRINT           reduce using rule 11 (instruction -> break .)
    WHILE           reduce using rule 11 (instruction -> break .)
    FOR             reduce using rule 11 (instruction -> break .)
    BREAK           reduce using rule 11 (instruction -> break .)
    CONTINUE        reduce using rule 11 (instruction -> break .)
    RETURN          reduce using rule 11 (instruction -> break .)
    ID              reduce using rule 11 (instruction -> break .)
    $end            reduce using rule 11 (instruction -> break .)
    }               reduce using rule 11 (instruction -> break .)
    ELSE            reduce using rule 11 (instruction -> break .)


state 11

    (12) instruction -> continue .

    {               reduce using rule 12 (instruction -> continue .)
    IF              reduce using rule 12 (instruction -> continue .)
    PRINT           reduce using rule 12 (instruction -> continue .)
    WHILE           reduce using rule 12 (instruction -> continue .)
    FOR             reduce using rule 12 (instruction -> continue .)
    BREAK           reduce using rule 12 (instruction -> continue .)
    CONTINUE        reduce using rule 12 (instruction -> continue .)
    RETURN          reduce using rule 12 (instruction -> continue .)
    ID              reduce using rule 12 (instruction -> continue .)
    $end            reduce using rule 12 (instruction -> continue .)
    }               reduce using rule 12 (instruction -> continue .)
    ELSE            reduce using rule 12 (instruction -> continue .)


state 12

    (13) instruction -> return .

    {               reduce using rule 13 (instruction -> return .)
    IF              reduce using rule 13 (instruction -> return .)
    PRINT           reduce using rule 13 (instruction -> return .)
    WHILE           reduce using rule 13 (instruction -> return .)
    FOR             reduce using rule 13 (instruction -> return .)
    BREAK           reduce using rule 13 (instruction -> return .)
    CONTINUE        reduce using rule 13 (instruction -> return .)
    RETURN          reduce using rule 13 (instruction -> return .)
    ID              reduce using rule 13 (instruction -> return .)
    $end            reduce using rule 13 (instruction -> return .)
    }               reduce using rule 13 (instruction -> return .)
    ELSE            reduce using rule 13 (instruction -> return .)


state 13

    (14) instruction -> assign .

    {               reduce using rule 14 (instruction -> assign .)
    IF              reduce using rule 14 (instruction -> assign .)
    PRINT           reduce using rule 14 (instruction -> assign .)
    WHILE           reduce using rule 14 (instruction -> assign .)
    FOR             reduce using rule 14 (instruction -> assign .)
    BREAK           reduce using rule 14 (instruction -> assign .)
    CONTINUE        reduce using rule 14 (instruction -> assign .)
    RETURN          reduce using rule 14 (instruction -> assign .)
    ID              reduce using rule 14 (instruction -> assign .)
    $end            reduce using rule 14 (instruction -> assign .)
    }               reduce using rule 14 (instruction -> assign .)
    ELSE            reduce using rule 14 (instruction -> assign .)


state 14

    (15) instruction -> assign_in_array .

    {               reduce using rule 15 (instruction -> assign_in_array .)
    IF              reduce using rule 15 (instruction -> assign_in_array .)
    PRINT           reduce using rule 15 (instruction -> assign_in_array .)
    WHILE           reduce using rule 15 (instruction -> assign_in_array .)
    FOR             reduce using rule 15 (instruction -> assign_in_array .)
    BREAK           reduce using rule 15 (instruction -> assign_in_array .)
    CONTINUE        reduce using rule 15 (instruction -> assign_in_array .)
    RETURN          reduce using rule 15 (instruction -> assign_in_array .)
    ID              reduce using rule 15 (instruction -> assign_in_array .)
    $end            reduce using rule 15 (instruction -> assign_in_array .)
    }               reduce using rule 15 (instruction -> assign_in_array .)
    ELSE            reduce using rule 15 (instruction -> assign_in_array .)


state 15

    (16) block -> { . instructions }
    (4) instructions -> . instructions instruction
    (5) instructions -> . instruction
    (6) instruction -> . block
    (7) instruction -> . if
    (8) instruction -> . print
    (9) instruction -> . while
    (10) instruction -> . for
    (11) instruction -> . break
    (12) instruction -> . continue
    (13) instruction -> . return
    (14) instruction -> . assign
    (15) instruction -> . assign_in_array
    (16) block -> . { instructions }
    (17) if -> . IF ( assignment ) instruction
    (18) if -> . IF ( assignment ) instruction ELSE instruction
    (19) print -> . PRINT arguments ;
    (22) while -> . WHILE ( assignment ) instruction
    (23) for -> . FOR ID = range instruction
    (25) break -> . BREAK ;
    (26) continue -> . CONTINUE ;
    (27) return -> . RETURN ;
    (28) return -> . RETURN assignment ;
    (29) assign -> . ID = assign
    (30) assign -> . ID = assignment ;
    (31) assign -> . ID PLUSASSIGN assignment ;
    (32) assign -> . ID MINUSASSIGN assignment ;
    (33) assign -> . ID TIMESASSIGN assignment ;
    (34) assign -> . ID DIVIDEASSIGN assignment ;
    (35) assign_in_array -> . ID array_range = assign
    (36) assign_in_array -> . ID array_range = assignment ;
    (37) assign_in_array -> . ID array_range PLUSASSIGN assignment ;
    (38) assign_in_array -> . ID array_range MINUSASSIGN assignment ;
    (39) assign_in_array -> . ID array_range TIMESASSIGN assignment ;
    (40) assign_in_array -> . ID array_range DIVIDEASSIGN assignment ;

    {               shift and go to state 15
    IF              shift and go to state 16
    PRINT           shift and go to state 17
    WHILE           shift and go to state 18
    FOR             shift and go to state 19
    BREAK           shift and go to state 21
    CONTINUE        shift and go to state 22
    RETURN          shift and go to state 23
    ID              shift and go to state 20

    instructions                   shift and go to state 25
    instruction                    shift and go to state 4
    block                          shift and go to state 5
    if                             shift and go to state 6
    print                          shift and go to state 7
    while                          shift and go to state 8
    for                            shift and go to state 9
    break                          shift and go to state 10
    continue                       shift and go to state 11
    return                         shift and go to state 12
    assign                         shift and go to state 13
    assign_in_array                shift and go to state 14

state 16

    (17) if -> IF . ( assignment ) instruction
    (18) if -> IF . ( assignment ) instruction ELSE instruction

    (               shift and go to state 26


state 17

    (19) print -> PRINT . arguments ;
    (20) arguments -> . assignment
    (21) arguments -> . assignment , arguments
    (43) assignment -> . STRING
    (44) assignment -> . matrix_special_features
    (45) assignment -> . relational_expression
    (46) assignment -> . expression
    (47) assignment -> . array
    (74) matrix_special_features -> . EYE ( INTNUM )
    (75) matrix_special_features -> . ZEROS ( INTNUM )
    (76) matrix_special_features -> . ONES ( INTNUM )
    (56) relational_expression -> . expression < expression
    (57) relational_expression -> . expression > expression
    (58) relational_expression -> . expression LESSEQUAL expression
    (59) relational_expression -> . expression GREATEREQUAL expression
    (60) relational_expression -> . expression EQUAL expression
    (61) relational_expression -> . expression NOTEQUAL expression
    (62) expression -> . expression + expression
    (63) expression -> . expression - expression
    (64) expression -> . expression * expression
    (65) expression -> . expression / expression
    (66) expression -> . expression DOTPLUS expression
    (67) expression -> . expression DOTMINUS expression
    (68) expression -> . expression DOTTIMES expression
    (69) expression -> . expression DOTDIVIDE expression
    (70) expression -> . number
    (71) expression -> . ID
    (72) expression -> . ID TRANSPOSE
    (73) expression -> . - expression
    (48) array -> . [ ]
    (49) array -> . [ dimensions ]
    (77) number -> . INTNUM
    (78) number -> . FLOATNUM

    STRING          shift and go to state 29
    EYE             shift and go to state 34
    ZEROS           shift and go to state 36
    ONES            shift and go to state 37
    ID              shift and go to state 40
    -               shift and go to state 38
    [               shift and go to state 41
    INTNUM          shift and go to state 35
    FLOATNUM        shift and go to state 42

    arguments                      shift and go to state 27
    assignment                     shift and go to state 28
    matrix_special_features        shift and go to state 30
    relational_expression          shift and go to state 31
    expression                     shift and go to state 32
    array                          shift and go to state 33
    number                         shift and go to state 39

state 18

    (22) while -> WHILE . ( assignment ) instruction

    (               shift and go to state 43


state 19

    (23) for -> FOR . ID = range instruction

    ID              shift and go to state 44


state 20

    (29) assign -> ID . = assign
    (30) assign -> ID . = assignment ;
    (31) assign -> ID . PLUSASSIGN assignment ;
    (32) assign -> ID . MINUSASSIGN assignment ;
    (33) assign -> ID . TIMESASSIGN assignment ;
    (34) assign -> ID . DIVIDEASSIGN assignment ;
    (35) assign_in_array -> ID . array_range = assign
    (36) assign_in_array -> ID . array_range = assignment ;
    (37) assign_in_array -> ID . array_range PLUSASSIGN assignment ;
    (38) assign_in_array -> ID . array_range MINUSASSIGN assignment ;
    (39) assign_in_array -> ID . array_range TIMESASSIGN assignment ;
    (40) assign_in_array -> ID . array_range DIVIDEASSIGN assignment ;
    (41) array_range -> . [ INTNUM , INTNUM ]
    (42) array_range -> . [ INTNUM ]

    =               shift and go to state 45
    PLUSASSIGN      shift and go to state 46
    MINUSASSIGN     shift and go to state 47
    TIMESASSIGN     shift and go to state 48
    DIVIDEASSIGN    shift and go to state 49
    [               shift and go to state 51

    array_range                    shift and go to state 50

state 21

    (25) break -> BREAK . ;

    ;               shift and go to state 52


state 22

    (26) continue -> CONTINUE . ;

    ;               shift and go to state 53


state 23

    (27) return -> RETURN . ;
    (28) return -> RETURN . assignment ;
    (43) assignment -> . STRING
    (44) assignment -> . matrix_special_features
    (45) assignment -> . relational_expression
    (46) assignment -> . expression
    (47) assignment -> . array
    (74) matrix_special_features -> . EYE ( INTNUM )
    (75) matrix_special_features -> . ZEROS ( INTNUM )
    (76) matrix_special_features -> . ONES ( INTNUM )
    (56) relational_expression -> . expression < expression
    (57) relational_expression -> . expression > expression
    (58) relational_expression -> . expression LESSEQUAL expression
    (59) relational_expression -> . expression GREATEREQUAL expression
    (60) relational_expression -> . expression EQUAL expression
    (61) relational_expression -> . expression NOTEQUAL expression
    (62) expression -> . expression + expression
    (63) expression -> . expression - expression
    (64) expression -> . expression * expression
    (65) expression -> . expression / expression
    (66) expression -> . expression DOTPLUS expression
    (67) expression -> . expression DOTMINUS expression
    (68) expression -> . expression DOTTIMES expression
    (69) expression -> . expression DOTDIVIDE expression
    (70) expression -> . number
    (71) expression -> . ID
    (72) expression -> . ID TRANSPOSE
    (73) expression -> . - expression
    (48) array -> . [ ]
    (49) array -> . [ dimensions ]
    (77) number -> . INTNUM
    (78) number -> . FLOATNUM

    ;               shift and go to state 54
    STRING          shift and go to state 29
    EYE             shift and go to state 34
    ZEROS           shift and go to state 36
    ONES            shift and go to state 37
    ID              shift and go to state 40
    -               shift and go to state 38
    [               shift and go to state 41
    INTNUM          shift and go to state 35
    FLOATNUM        shift and go to state 42

    assignment                     shift and go to state 55
    matrix_special_features        shift and go to state 30
    relational_expression          shift and go to state 31
    expression                     shift and go to state 32
    array                          shift and go to state 33
    number                         shift and go to state 39

state 24

    (4) instructions -> instructions instruction .

    {               reduce using rule 4 (instructions -> instructions instruction .)
    IF              reduce using rule 4 (instructions -> instructions instruction .)
    PRINT           reduce using rule 4 (instructions -> instructions instruction .)
    WHILE           reduce using rule 4 (instructions -> instructions instruction .)
    FOR             reduce using rule 4 (instructions -> instructions instruction .)
    BREAK           reduce using rule 4 (instructions -> instructions instruction .)
    CONTINUE        reduce using rule 4 (instructions -> instructions instruction .)
    RETURN          reduce using rule 4 (instructions -> instructions instruction .)
    ID              reduce using rule 4 (instructions -> instructions instruction .)
    $end            reduce using rule 4 (instructions -> instructions instruction .)
    }               reduce using rule 4 (instructions -> instructions instruction .)


state 25
